tests/suites/0_stateless/17_altertable/17_0005_alter_table_modify_column_type.result
1	2	3
a	VARCHAR	NO	''	
b	INT	NO	0	
c	INT	NO	0	
1.0	2
a	FLOAT	NO	0	
b	VARCHAR	NO	''	
c	INT	NO	0	
ERROR 1105 (HY000) at line 1: BadArguments. Code: 1006, Text = invalid float literal while evaluating function `to_float32('a')`.
ERROR 1105 (HY000) at line 1: UnknownColumn. Code: 1058, Text = Cannot find column b.
0	1
ERROR 1105 (HY000) at line 1: BadArguments. Code: 1006, Text = error: 
  --> SQL:1:1
  |
1 | alter table test_modify_column_type.c modify column a float not null default 'a'
  | ^^^^^^^^^^^^^^^ invalid float literal while evaluating function `to_float32('a')`

.
0.0	1
0.0	1
1.2	2
1	10
1	10
1	10	1.01
1	10	1.01
10	2	2.2
begin test default column
1	1
1	1
not	2
begin test not NULL column
1	1
1	1
	2
a	VARCHAR	NO	''	
b	INT	NO	0	
